add middleware, gracefull shutdown
