# internal/api/repositories/user.repositories.go
@@ -2,7 +2,9 @@ package repositories
 
 import (
 	"github.com/VuThanhThien/golang-gorm-postgres/internal/models"
+	"github.com/VuThanhThien/golang-gorm-postgres/internal/models/dto"
 	"gorm.io/gorm"
+	"gorm.io/gorm/clause"
 )
 
 type UserRepository struct {
@@ -31,20 +33,37 @@ func (r *UserRepository) CreateWithTx(tx *gorm.DB, user *models.User) error {
 	return tx.Session(&gorm.Session{FullSaveAssociations: true}).Create(user).Error
 }
 
-func (r *UserRepository) List(page, pageSize int) ([]models.User, int, error) {
+func (r *UserRepository) List(dto dto.ListUserDto, pagination dto.PaginationDto) ([]models.User, int, error) {
+
 	var users []models.User
 	var total int64
 
-	offset := (page - 1) * pageSize
+	offset := (*pagination.Page - 1) * *pagination.PageSize
 
-	err := r.db.Model(&models.User{}).Count(&total).Error
+	clauses := make([]clause.Expression, 0)
+	if dto.Email != "" {
+		clauses = append(clauses, clause.Like{Column: "email", Value: dto.Email})
+	}
+	if dto.Name != "" {
+		clauses = append(clauses, clause.Like{Column: "name", Value: "%" + dto.Name + "%"})
+	}
+	if dto.Provider != "" {
+		clauses = append(clauses, clause.Eq{Column: "provider", Value: dto.Provider})
+	}
+	if dto.Role != "" {
+		clauses = append(clauses, clause.Eq{Column: "role", Value: dto.Provider})
+	}
+
+	err := r.db.Model(&models.User{}).Clauses(clauses...).Count(&total).Error
 	if err != nil {
 		return nil, 0, err
 	}
 
-	err = r.db.Select("users.id").
+	err = r.db.
+		Model(&models.User{}).
+		Clauses(clauses...).
 		Offset(offset).
-		Limit(pageSize).
+		Limit(*pagination.PageSize).
 		Find(&users).
 		Error
 	if err != nil {
